change color menu

--- a/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.css
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.css
@@ -30,6 +30,10 @@ mat-input-container.mat-input-focused label {
     border-right: none;
 }
 
+.mat-focused .placeholder {
+    display: none;
+}
+
 .txt-input-pesquisa {
     font-size: 16px;
     font-weight: 400;
