--- a/BlogTravelWebApp/src/app/pages/home/home.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div id="head-bar" [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}">
   <app-head-bar></app-head-bar>
 </div>
-<div fxLayout="row" style="margin-top: 50px;" [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}">
-  <img src="../../../assets/images/banner.jpg" class="img-header"/>
+<div fxLayout="row" class="banner" [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}">
+  <img src="../../../assets/images/banner1.jpg" class="img-header"/>
 </div>
 <div fxLayout="row" fxLayout.xs="column" class="body-post" style="flex-shrink: 0">
   <div fxFlex.md="5" fxFlex.lg="10" fxFlex.xl="20" fxLayoutAlign="center start" [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}">
