--- a/BlogTravelWebApp/src/styles.scss
+++ b/BlogTravelWebApp/src/styles.scss
@@ -156,3 +156,8 @@ ul.sidenav {
 .star-icon:before {
     color: darken(mat-color($theme-accent),20)!important;
 } 
+
+
+.spinner {
+  margin-top: 50vh;
+}
