--- a/BlogTravelWebApp/src/mi-theme.scss
+++ b/BlogTravelWebApp/src/mi-theme.scss
@@ -5,8 +5,8 @@ $toolbar-height: 64px;
 @include mat-core();
 
 $theme-primary: mat-palette($mat-green, 900, 800, 700);
-$theme-accent: mat-palette($mat-grey, 900, 800, 700);
-$theme-warn: mat-palette($mat-red);
+$theme-accent: mat-palette($mat-green, 900, 800, 700);
+$theme-warn: mat-palette($mat-grey);
 
 $theme: mat-light-theme($theme-primary, $theme-accent, $theme-warn);
 
