Ajust flex router-outlet

--- a/BlogTravelWebApp/src/app/app.component.html
+++ b/BlogTravelWebApp/src/app/app.component.html
@@ -72,6 +72,6 @@
         </mat-sidenav-content>
     </mat-sidenav-container>
 </div>
-<div *ngIf="!mobile">
+<div *ngIf="!mobile" fxFlex="100">
     <router-outlet></router-outlet>
 </div>
