--- a/BlogTravelWebApp/src/app/pages/post-create/post.component.html
+++ b/BlogTravelWebApp/src/app/pages/post-create/post.component.html
@@ -1,5 +1,5 @@
 <app-head-bar [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}"></app-head-bar>
-<form [formGroup]="form" style="margin-top: 50px;background-color: #362f50c4;" fxFlex>
+<form [formGroup]="form" style="margin-top: 50px;background-color: #362f50c4;" fxFlex="100">
     <div fxLayout="row">
         <div fxLayout="column" fxFlex>
             <div fxLayout="row wrap" fxLayoutAlign="center center" style="padding: 20px;">
