--- a/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.scss
+++ b/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.scss
@@ -226,4 +226,17 @@ iframe .video-post{
 }
 
 
+.p-post {
+    padding: 0px 10px 0px 10px !important;
+}
+
+p.p-post {
+    padding: 0px 10px 0px 10px !important;
+}
+.date-post {
+    font-size: 0.9em;
+    color: #5a5858;
+}
+
+
 
