--- a/BlogTravelWebApp/src/app/pages/home/components/info-thais/info-thais.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/info-thais/info-thais.component.html
@@ -2,31 +2,32 @@
   <mat-card fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <img mat-card-image src="../../../assets/images/people/thais-home.jpg">
     <mat-card-content>
-        <span class="txt-aboutme">
-            Futura nutricionista, apaixonada por viajar e com uma queda pelos Estados Unidos. 
-            Aqui eu vou compartilhar de tudo, e espero ajudar de qualquer forma <3
-        </span>
-        <!-- <button md-button>Saiba mais</button> -->
+      <span class="txt-aboutme">
+        Futura nutricionista, apaixonada por viajar e com uma queda pelos Estados Unidos. Aqui eu vou compartilhar de tudo, e espero
+        ajudar de qualquer forma
+        <3 </span>
+          <!-- <button md-button>Saiba mais</button> -->
     </mat-card-content>
-    <mat-card-actions>
-      <div fxLayout="row" fxLayoutAlign="center center">     
-        <div fxLayout="row" fxLayoutAlign="center center">
-            <a (click)="snapchat()" class="redes-sociais-thais" style="CURSOR: POINTER">
-                  <img src="../../assets/images/redes-sociais/snapchat.svg" class="icon-rede-social rede-social-hover-opacity">
+    <mat-card-actions style="text-align: center;">
+      <div fxLayout="row" fxFlex>
+            <a (click)="snapchat()" class="redes-sociais-thais" style="CURSOR: POINTER" fxFlex>
+              <img src="../../assets/images/redes-sociais/snapchat.svg" class="icon-rede-social rede-social-hover-opacity">
             </a>
-            <a href="https://www.facebook.com/trindadethaiss/" target="_blank" class="redes-sociais-thais">
-                  <img src="../../assets/images/redes-sociais/facebook.svg" class="icon-rede-social rede-social-hover-opacity">
-                </a>
-            <a href="https://www.instagram.com/trindadethais/" target="_blank" class="redes-sociais-thais">
-                  <img src="../../assets/images/redes-sociais/instagram.svg" class="icon-rede-social rede-social-hover-opacity">
+            <a href="https://www.facebook.com/trindadethaiss/" target="_blank" class="redes-sociais-thais" fxFlex>
+              <img src="../../assets/images/redes-sociais/facebook.svg" class="icon-rede-social rede-social-hover-opacity">
             </a>
-            <a href="https://twitter.com/trindadethaiss" target="_blank" class="redes-sociais-thais">
-                  <img src="../../assets/images/redes-sociais/twitter.svg" class="icon-rede-social rede-social-hover-opacity">
-                </a>
-            <a (click)="spotify()" class="redes-sociais-thais" style="CURSOR: POINTER">
-                  <img src="../../assets/images/redes-sociais/spotify.svg" class="icon-rede-social rede-social-hover-opacity">
+            <a href="https://www.instagram.com/trindadethais/" target="_blank" class="redes-sociais-thais" fxFlex>
+              <img src="../../assets/images/redes-sociais/instagram.svg" class="icon-rede-social rede-social-hover-opacity">
             </a>
-        </div>
+            <a href="https://twitter.com/trindadethaiss" target="_blank" class="redes-sociais-thais" fxFlex>
+              <img src="../../assets/images/redes-sociais/twitter.svg" class="icon-rede-social rede-social-hover-opacity">
+            </a>
+            <a href="https://www.youtube.com/thaistrindade" target="_blank" class="redes-sociais-thais" fxFlex>
+              <img src="../../assets/images/redes-sociais/youtube.svg" class="icon-rede-social-youtube rede-social-hover-opacity">
+            </a>
+            <a (click)="spotify()" class="redes-sociais-thais" style="CURSOR: POINTER" fxFlex>
+              <img src="../../assets/images/redes-sociais/spotify.svg" class="icon-rede-social rede-social-hover-opacity">
+            </a>
       </div>
     </mat-card-actions>
   </mat-card>
