--- a/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.scss
+++ b/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.scss
@@ -234,9 +234,12 @@ p.p-post {
     padding: 0px 10px 0px 10px !important;
 }
 .date-post {
-    font-size: 0.9em;
+    font-size: 0.8em;
     color: #5a5858;
 }
 
+.post-footer {
+    padding: 0px 10px 5px;
+}
 
 
