facebook plugin and carousel to facebook page

--- a/BlogTravelWebApp/src/app/pages/home/components/instagram/instagram.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/instagram/instagram.component.html
@@ -2,9 +2,11 @@
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxLayout="column">
       <h2 class="instagram">Instagram</h2>
-      <script src="//lightwidget.com/widgets/lightwidget.js"></script>
-      <iframe src="//lightwidget.com/widgets/690b654ac7f45c0aa9ab9aeaac0f0f9b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"
-        style="width: 100%; border: 0; overflow: hidden;height: 340px;"></iframe>
+      <div class="plugin">
+        <script src="//lightwidget.com/widgets/lightwidget.js"></script>
+        <iframe src="//lightwidget.com/widgets/690b654ac7f45c0aa9ab9aeaac0f0f9b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"
+          style="width: 100%; border: 0; overflow: hidden;height: 340px;"></iframe>
+      </div>
     </div>
   </div>
 </div>
