--- a/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.html
@@ -35,7 +35,7 @@
         <div fxLayout="row" fxLayoutAlign="start center">
           <div fxFlex class="line-col3"></div>
         </div>
-        <div fxLayout="row" style="padding: 4px 20px 4px 20px;">
+        <div fxLayout="row" class="post-footer">
           <div fxLayoutAlign="start center" fxFlex="70">
             <div fxLayout="column">
               <span class="txt-mais-posts">Veja mais posts sobre</span>
@@ -46,9 +46,22 @@
               </div>
             </div>
           </div>
-          <div fxLayoutAlign="end initial" fxFlex="30">
+          <div fxFlex fxLayoutAlign="end center">
             <button-shared [idPost]="post._id"></button-shared>
           </div>
+        </div>
+        <div fxLayout="row" class="post-footer">
+          <div fxFlex fxLayoutAlign="initial center">
+            <span class="date-post">Postado em {{post.date | date: 'dd'}}
+              <span> de {{formatDatePost(post.date)}}</span>
+              <span> de {{post.date | date: 'yyyy'}}</span>
+              <span> por {{post.author.name}}</span>
+            </span>
+          </div>
+
+          <!-- <div fxLayoutAlign="end initial" fxFlex="30">
+            <button-shared [idPost]="post._id"></button-shared>
+          </div> -->
         </div>
         <div fxLayout="row" fxLayoutAlign="end center">
           <div fxLayout="column">
@@ -81,23 +94,16 @@
       </div>
       <div id="{{post._id}}" [ngClass]="{'block-with-text': idPost==null}" [innerHTML]="post.description | sanitizeHtml"></div>
       <app-hide-text [idPost]=idPost [idDiv]="post._id"></app-hide-text>
-      <div>
-        <div fxLayout="row" fxLayoutAlign="start center">
-          <div fxFlex class="line-col3"></div>
-        </div>
-        <div fxLayout="row" style="margin-top: -10px;" class="post-footer">
-          <div fxFlex fxLayoutAlign="center center">
-            <span class="date-post">Postado em {{post.date | date: 'dd'}}
-              <span> de {{formatDatePost(post.date)}}</span>
-              <span> de {{post.date | date: 'yyyy'}}</span>
-              <span> por {{post.author.name}}</span>
-            </span>     
-          </div>
-          <div fxFlex fxLayoutAlign="end center">
+      <div fxLayout="row" fxLayoutAlign="start center">
+        <div fxFlex class="line-col3"></div>
+      </div>
+      <div class="post-footer">
+        <div fxLayout="row" style="margin-top: -10px;">
+          <div fxFlex="100" fxLayoutAlign="end center">
             <button-shared [idPost]="post._id"></button-shared>
           </div>
         </div>
-        <div fxLayout="row" class="post-footer">
+        <div fxLayout="row">
           <div fxLayoutAlign="start center" fxFlex>
             <div fxLayout="column">
               <span class="txt-mais-posts">Veja mais posts sobre</span>
@@ -109,7 +115,16 @@
             </div>
           </div>
         </div>
+        <div fxLayout="row">
+          <div fxFlex fxLayoutAlign="start center">
+            <span class="date-post">Postado em {{post.date | date: 'dd'}}
+              <span> de {{formatDatePost(post.date)}}</span>
+              <span> de {{post.date | date: 'yyyy'}}</span>
+              <span> por {{post.author.name}}</span>
+            </span>
+          </div>
 
+        </div>
       </div>
     </div>
   </div>
