--- a/BlogTravelWebApp/src/app/pages/home/components/snapchat/snapchat.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/snapchat/snapchat.component.html
@@ -5,7 +5,7 @@
       <img src="../../../assets/images/snapchat.jpg" 
            style="max-height: 100%;max-width: 100%;width: auto;  
                   height: auto;box-shadow: 0 29px 32px -28px rgba(0,0,0,0.5);
-                  border-radius: 4px;">
+                  border-radius: 4px; padding: 2px">
     </div>
   </div>
 </div>
