--- a/BlogTravelWebApp/src/app/pages/home/components/spotify/spotify.component.css
+++ b/BlogTravelWebApp/src/app/pages/home/components/spotify/spotify.component.css
@@ -9,5 +9,9 @@
     color: #fff;
     background-color: #1bbc9b;
     margin: 0px;
-    border-radius: 1px;
+    border-radius: 2px;
 }
+
+.plugin {
+    padding: 2px;
+  }
