--- a/BlogTravelWebApp/src/app/pages/home/home.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/home.component.html
@@ -24,6 +24,7 @@
           <app-info-cristian></app-info-cristian>
           <app-instagram></app-instagram>
           <app-facebook></app-facebook>
+          <app-youtube></app-youtube>
           <app-spotify></app-spotify>   
           <app-snapchat></app-snapchat>     
         </div>
