--- a/BlogTravelWebApp/src/app/pages/home/components/spotify/spotify.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/spotify/spotify.component.html
@@ -2,8 +2,10 @@
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxLayout="column">
       <h2 class="spotify">Spotify</h2>
+      <div class="plugin">
       <iframe src="https://open.spotify.com/embed?uri=spotify:user:trindadethais:playlist:15nITBPmD8QztqTNEcVY36&theme=white" frameborder="0" allowtransparency="true"
-              style="width: 100%; border: 0; overflow: hidden;height: 340px; margin-top:20x;"></iframe>         
+              style="width: 100%; border: 0; overflow: hidden;height: 340px; margin-top:20x;"></iframe> 
+      </div>        
     </div>
   </div>
 </div>
